# evm-ffi

./: .gitignore  README.md
c/: Makefile  sputnikvm.h
c/ffi/: Cargo.toml
c/ffi/src/: dynamic.rs  lib.rs
go/: main.go
go/sputnikvm/: sputnikvm.go
