[package]
name = "evm-ffi"
version = "0.11.0-beta.0"
authors = ["Wei Tang <hi@that.world>", "Mike Lubinets <lubinetsm@yandex.ru>"]
repository = "https://github.com/etclabscore/sputnikvm-ffi"
license-file = "LICENSE"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
ethereum-bigint = { version = "0.2", default-features = false }
evm = { version = "0.11.0-beta", path = "../../../evm-rs/", default-features = false }
evm-network = { version = "0.11.0-beta", path = "../../../evm-rs/network/dynamic", default-features = false }
smallvec = { version = "0.6.8", default-features = false }
env_logger = { version = "0.5.13", optional = true }


[features]
default = ["std", "rust-secp256k1", "rlp", "log"]
rlp = ["ethereum-bigint/rlp", "evm-network/rlp"]
c-secp256k1 = ["evm/c-secp256k1", "evm-network/c-secp256k1"]
rust-secp256k1 = ["evm/rust-secp256k1", "evm-network/rust-secp256k1"]
std = ["evm/std", "evm-network/std", "smallvec/std"]
log = ["env_logger"]
